[package]
name = "lcmx"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Calculate the least common multiple of multiple values"
homepage = "https://github.com/rikonaka/lcmx-rs"
documentation = "https://docs.rs/lcmx"
repository = "https://github.com/rikonaka/lcmx-rs"
readme = "README.md"
keywords = ["lcm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcdx = "^0"
